# chist

./: .gitignore  CMakeLists.txt  Makefile
src/: Log.hpp  ToHuman.hpp  main.cpp
src/cleaner/: Cleaner.cpp  Cleaner.hpp
src/cli/: CmdClean.cpp  CmdClean.hpp  CmdDupes.cpp  CmdDupes.hpp  CmdJunk.cpp  CmdJunk.hpp  CmdScan.cpp  CmdScan.hpp  CmdSysinf.cpp  CmdSysinf.hpp  CmdTop.cpp  CmdTop.hpp  CommandRegistry.cpp  CommandRegistry.hpp  Progress.cpp  Progress.hpp  Style.cpp  Style.hpp  TtyLine.cpp  TtyLine.hpp
src/core/: Analyzer.cpp  Analyzer.hpp  CacheDetector.cpp  CacheDetector.hpp  Deduplicator.cpp  Deduplicator.hpp  FsWalker.cpp  FsWalker.hpp  Hasher.cpp  Hasher.hpp  ThreadPool.cpp  ThreadPool.hpp  Tree.cpp  Tree.hpp
src/system/: SystemInfo.cpp  SystemInfo.hpp
